<resources>
    <string name="app_name">DchaSystemSettings</string>
    <string name="action_settings">DchaSystemSettings</string>
    <string name="msg_ok">OK</string>
    <string name="common_msg_tablet_setting">タブレットの設定</string>
    <string name="common_msg_owner_setting">きみの設定</string>
    <string name="btn_access_near_netowork">近くのネットワークから接続する</string>
    <string name="btn_access_rakuraku">ラクラク無線スタートから接続する</string>
    <string name="msg_mac_address">MACアドレス</string>
    <string name="msg_ap_name">アクセスポイント名：</string>
    <string name="msg_add_network">Wi-Fiネットワークを追加</string>
    <string name="msg_network">Wi-Fiネットワーク</string>
    <string name="msg_access_wifi">Wi-Fi接続</string>
    <string name="msg_access_wifi_on">する</string>
    <string name="msg_access_wifi_off">しない</string>
    <string name="msg_wifi_setting_title">Wi-Fi</string>
    <string name="msg_wifi_setting_content">Wi-Fiの接続設定を行います。下記より接続方法を\n選択してください。</string>
    <string name="msg_sd_update_enable">端末は最新の状態です。</string>
    <string name="msg_sd_update_able">端末をアップデートできます。</string>
    <string name="msg_sd_update_btn">アップデート</string>
    <string name="msg_sd_update_dialog_title">アップデート中</string>
    <string name="msg_sd_update_dialog_content">しばらくお待ちください</string>
    <string name="msg_sd_update_cancel">アップデートが中断しました。</string>
    <string name="msg_sd_update_failed">アップデートに失敗しました。</string>
    <string name="path_sd_update_file">/mnt/extsd/update.zip</string>
    <string name="msg_setting_title">設定</string>
    <string name="msg_fundamental_setting_title">基本設定</string>
    <string name="msg_system_setting_title">システム設定</string>
    <string name="msg_system_setting_attention">（おうちの方と一緒に設定してください）</string>
    <string name="msg_password_title">パスワード</string>
    <string name="msg_password_invalid">入力されたパスワードは正しくありません。</string>
    <string name="msg_management_dialog">ここから先は，必ずおうちの人に\nお願いしてやってもらおう！</string>
    <string name="msg_management_dialog_alerm">警告</string>
    <string name="msg_management_dialog_abandon">チャレンジタッチを\n完全に使えなくしますか？</string>
    <string name="msg_management_dialog_abandon2">本当に完全に使えなくしますか？</string>
    <string name="msg_management_dialog_initialize">チャレンジタッチを\n初期化しますか？</string>
    <string name="msg_management_dialog_initialize2">本当に初期化しますか？</string>
    <string name="wifi_security_short_wep">WEP</string>
    <string name="wifi_security_short_wpa">WPA</string>
    <string name="wifi_security_short_wpa2">WPA2</string>
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <string name="wifi_security_short_eap">802.1x</string>
    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_wpa">WPA PSK</string>
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <string name="wifi_security_eap">802.1x EAP</string>
    <string name="wifi_security_passpoint">Passpoint</string>
    <string name="settings_package">com.android.settings</string>
    <string name="certinstaller_package">com.android.certinstaller</string>
    <string name="wifi_ip_address_hint">192.168.1.128</string>
    <string name="wifi_dns1_hint">8.8.8.8</string>
    <string name="wifi_dns2_hint">8.8.4.4</string>
    <string name="wifi_gateway_hint">192.168.1.1</string>
    <string name="wifi_network_prefix_length_hint">24</string>
    <string name="proxy_port_hint">8080</string>
    <string name="proxy_url_hint">https://www.example.com/proxy.pac</string>
    <string name="proxy_exclusionlist_hint">example.com,mycomp.test.com,localhost</string>
    <string name="proxy_hostname_hint">proxy.example.com</string>
    <string name="device_info_default">不明</string>
    <string name="proxy_settings_title">プロキシ設定</string>
    <string name="proxy_clear_text">消去</string>
    <string name="proxy_port_label">プロキシポート</string>
    <string name="proxy_exclusionlist_label">プロキシを不使用</string>
    <string name="proxy_defaultView_text">初期設定に戻す</string>
    <string name="proxy_action_text">終了</string>
    <string name="proxy_hostname_label">プロキシのホスト名</string>
    <string name="proxy_error">注意</string>
    <string name="proxy_error_dismiss">OK</string>
    <string name="proxy_error_invalid_host">入力したホスト名は無効です。</string>
    <string name="proxy_error_invalid_exclusion_list">入力された除外リストの形式が正しくありません。除外するドメインをカンマ区切りリスト形式で入力してください。</string>
    <string name="proxy_error_empty_port">ポートフィールドを入力してください。</string>
    <string name="proxy_error_empty_host_set_port">[ホスト]フィールドが空の場合は、[ポート]フィールドも空にしてください。</string>
    <string name="proxy_error_invalid_port">入力したポートは無効です。</string>
    <string name="proxy_warning_limited_support">HTTPプロキシはブラウザで使用されていますが、他のアプリでは使用できません。</string>
    <string name="proxy_url_title">PAC URL: </string>
    <string name="cancel">キャンセル</string>
    <string name="wifi_band_24ghz">2.4GHz</string>
    <string name="wifi_band_5ghz">5GHz</string>
    <string name="link_speed">%1$dMbps</string>
    <string name="wifi_settings_category">Wi-Fiの設定</string>
    <string name="wifi_setup_wizard_title">Wi-Fiネットワークの選択</string>
    <string name="wifi_starting">Wi-FiをONにしています…</string>
    <string name="wifi_stopping">Wi-FiをOFFにしています…</string>
    <string name="wifi_add_network">ネットワークを追加</string>
    <string name="wifi_menu_more_options">その他のオプション</string>
    <string name="wifi_empty_list_wifi_off">利用可能なネットワークを表示するにはWi-FiをON</string>
    <string name="wifi_empty_list_wifi_on">Wi-Fiネットワークを検索しています…</string>
    <string name="wifi_other_network">別のネットワークを追加</string>
    <string name="wifi_setup_wps">自動設定（WPS）</string>
    <string name="wifi_show_advanced">詳細オプションを表示</string>
    <string name="wifi_wps_setup_title">Wi-Fi保護設定</string>
    <string name="wifi_wps_setup_msg">WPSを開始しています…</string>
    <string name="wifi_wps_onstart_pbc">ルーターのWi-Fi保護設定ボタンを押します。「WPS」と表記されている場合や、次のような記号が表示されている場合もあります。</string>
    <string name="wifi_wps_onstart_pin">Wi-FiルーターでPIN「%1$s」を入力します。セットアップの完了まで最大2分ほどかかることがあります。</string>
    <string name="wifi_wps_complete">WPSの設定に成功しました。ネットワークに接続しています…</string>
    <string name="wifi_wps_connected">Wi-Fiネットワーク「%s」に接続しました</string>
    <string name="wifi_wps_in_progress">WPSを設定中です。完了まで最大2分程度かかることがあります。</string>
    <string name="wifi_wps_failed_generic">WPSの設定に失敗しました。数分後にもう一度お試しください。</string>
    <string name="wifi_wps_failed_wep">無線ルーターのセキュリティ設定（WEP）はサポートされていません</string>
    <string name="wifi_wps_failed_tkip">無線ルーターのセキュリティ設定（TKIP）はサポートされていません</string>
    <string name="wifi_wps_failed_auth">認証に失敗しました。もう一度お試しください。</string>
    <string name="wifi_wps_failed_overlap">別のWPSセッションが検出されました。数分後にもう一度お試しください。</string>
    <string name="wifi_ssid">ネットワークSSID</string>
    <string name="wifi_ssid_hint">SSIDを入力します</string>
    <string name="wifi_security">セキュリティ</string>
    <string name="wifi_signal">電波強度</string>
    <string name="wifi_status">接続状況</string>
    <string name="wifi_speed">リンク速度</string>
    <string name="wifi_frequency">周波数</string>
    <string name="wifi_ip_address">IPアドレス</string>
    <string name="passpoint_label">保存</string>
    <string name="passpoint_content">%1$sの認証情報</string>
    <string name="wifi_eap_method">EAP方式</string>
    <string name="please_select_phase2">フェーズ2認証</string>
    <string name="wifi_eap_ca_cert">CA証明書</string>
    <string name="wifi_eap_domain">ドメイン</string>
    <string name="wifi_eap_user_cert">ユーザー証明書</string>
    <string name="wifi_eap_identity">ID</string>
    <string name="wifi_eap_anonymous">匿名ID</string>
    <string name="wifi_password">パスワード</string>
    <string name="wifi_show_password">パスワードを表示する</string>
    <string name="wifi_ip_settings">IP設定</string>
    <string name="wifi_shared">他の端末ユーザーと共有する</string>
    <string name="wifi_unchanged">（変更なし）</string>
    <string name="wifi_unspecified">選択してください</string>
    <string name="wifi_multiple_cert_added">（複数の証明書が追加されています）</string>
    <string name="wifi_use_system_certs">システム証明書を使用</string>
    <string name="wifi_do_not_provide_eap_user_cert">指定しない</string>
    <string name="wifi_do_not_validate_eap_server">検証しない</string>
    <string name="wifi_do_not_validate_eap_server_warning">証明書が指定されていません。この接続ではプライバシーが保護されません。</string>
    <string name="wifi_no_domain_warning">ドメインを指定する必要があります。</string>
    <string name="wifi_wps_available_first_item">WPS利用可</string>
    <string name="wifi_wps_available_second_item"> （WPS利用可）</string>
    <string name="wifi_connect">接続</string>
    <string name="wifi_failed_connect_message">ネットワークに接続できませんでした</string>
    <string name="wifi_forget">切断</string>
    <string name="wifi_failed_forget_message">ネットワークから切断できませんでした</string>
    <string name="wifi_save">保存</string>
    <string name="wifi_failed_save_message">ネットワークを保存できませんでした</string>
    <string name="wifi_cancel">キャンセル</string>
    <string name="wifi_skip_anyway">無視してスキップ</string>
    <string name="wifi_dont_skip">戻る</string>
    <string name="wifi_skipped_message">警告: [Wi‑Fi]をスキップすると、タブレットはモバイルデータのみを使って最初のダウンロードやアップデートを行います。データ通信料が発生する可能性を防ぐにはWi‑Fiに接続してください。</string>
    <string name="wifi_and_mobile_skipped_message">Wi‑Fiをスキップした場合:\n\nタブレットはインターネットに接続されません。\n\nインターネットに接続するまで、ソフトウェアは更新されません。\n\n現時点では端末保護機能を有効にできません。</string>
    <string name="wifi_advanced_ip_address_title">IPアドレス</string>
    <string name="wifi_ip_settings_invalid_ip_address">有効なIPアドレスを入力してください。</string>
    <string name="wifi_ip_settings_invalid_gateway">有効なゲートウェイアドレスを入力してください。</string>
    <string name="wifi_ip_settings_invalid_dns">有効なDNSアドレスを入力してください。</string>
    <string name="wifi_ip_settings_invalid_network_prefix_length">ネットワークプレフィックス長は0～32で指定します。</string>
    <string name="wifi_dns1">DNS 1</string>
    <string name="wifi_dns2">DNS 2</string>
    <string name="wifi_gateway">ゲートウェイ</string>
    <string name="wifi_network_prefix_length">ネットワークプレフィックス長</string>
    <string name="system_update_settings_list_item_title">システムアップデート</string>
    <string name="system_update_settings_list_item_summary" />
    <string name="firmware_version">Androidバージョン</string>
    <string name="security_patch">Androidセキュリティパッチレベル</string>
    <string name="model_number">モデル番号</string>
    <string name="fcc_equipment_id">装置ID</string>
    <string name="baseband_version">ベースバンドバージョン</string>
    <string name="kernel_version">カーネルバージョン</string>
    <string name="build_number">ビルド番号</string>
    <string name="selinux_status">SELinuxのステータス</string>
    <string name="device_info_not_available">該当なし</string>
    <string name="device_status_activity_title">端末の状態</string>
    <string name="device_status">端末の状態</string>
    <string name="device_status_summary">電池やネットワークなどの情報のステータス</string>
    <string name="status_wifi_mac_address">Wi-Fi MACアドレス</string>
    <string name="status_bt_address">Bluetoothアドレス</string>
    <string name="status_serial_number">シリアル番号</string>
    <string name="about_settings">タブレット情報</string>
    <string name="legal_information">法的情報</string>
    <string name="copyright_title">著作権</string>
    <string name="license_title">ライセンス</string>
    <string name="terms_title">利用規約</string>
    <string name="webview_license_title">システムのWebViewライセンス</string>
    <string name="health_check_macaddress">MACアドレス</string>
    <string name="health_check_ssid">SSID</string>
    <string name="health_check_wifi">Wi-Fi接続</string>
    <string name="health_check_ipaddress">IPアドレス</string>
    <string name="health_check_subnetmask">サブネットマスク</string>
    <string name="health_check_defaultgateway">デフォルトゲートウェイ</string>
    <string name="health_check_dns1">DNS1</string>
    <string name="health_check_dns2">DNS2</string>
    <string name="health_check_net_connection">インターネット接続</string>
    <string name="health_check_download_speed">ダウンロード速度</string>
    <string name="health_check_pending">--</string>
    <string name="h_check_low_speed">2Mbps以下</string>
    <string name="test_environment">端末種別</string>
</resources>