<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/about_settings">
    <PreferenceScreen
        android:title="@string/legal_information"
        android:key="container">
        <PreferenceScreen
            android:title="@string/copyright_title"
            android:key="copyright">
            <intent android:action="android.settings.COPYRIGHT"/>
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/license_title"
            android:key="license">
            <intent android:action="android.settings.LICENSE"/>
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/terms_title"
            android:key="terms">
            <intent android:action="android.settings.TERMS"/>
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/webview_license_title"
            android:key="webview_license">
            <intent android:action="android.settings.WEBVIEW_LICENSE"/>
        </PreferenceScreen>
    </PreferenceScreen>
    <Preference
        android:title="@string/model_number"
        android:key="device_model"
        android:summary="@string/device_info_default"
        style="?android:attr/preferenceInformationStyle"/>
    <Preference
        android:title="@string/firmware_version"
        android:key="firmware_version"
        android:summary="@string/device_info_default"
        style="?android:attr/preferenceInformationStyle"/>
    <Preference
        android:title="@string/security_patch"
        android:key="security_patch"
        android:summary="@string/device_info_default"
        style="?android:attr/preferenceInformationStyle"/>
    <Preference
        android:title="@string/kernel_version"
        android:key="kernel_version"
        android:summary="@string/device_info_default"
        style="?android:attr/preferenceInformationStyle"/>
    <Preference
        android:title="@string/build_number"
        android:key="build_number"
        android:summary="@string/device_info_default"
        style="?android:attr/preferenceInformationStyle"/>
    <Preference
        android:title="@string/status_serial_number"
        android:key="serial_number"
        android:summary=""
        style="?android:attr/preferenceInformationStyle"/>
    <Preference
        android:title="@string/test_environment"
        android:key="test_environment"
        android:summary=""
        style="?android:attr/preferenceInformationStyle"/>
</PreferenceScreen>
