<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:background="@drawable/bg_black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <ImageView
        android:layout_width="900dp"
        android:layout_height="701dp"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/hc_detail_base"/>
    <ImageView
        android:layout_width="521dp"
        android:layout_height="31dp"
        android:layout_marginLeft="379dp"
        android:layout_marginTop="46dp"
        android:src="@drawable/hc_detail_title"/>
    <ImageView
        android:layout_width="780dp"
        android:layout_height="464dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="130dp"
        android:src="@drawable/hc_detail_framework"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@color/text_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="138dp"
        android:text="@string/health_check_macaddress"
        style="@style/fontFamily"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@color/text_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="184dp"
        android:text="@string/health_check_ssid"
        style="@style/fontFamily"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@color/text_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="230dp"
        android:text="@string/health_check_wifi"
        style="@style/fontFamily"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@color/text_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="276dp"
        android:text="@string/health_check_ipaddress"
        style="@style/fontFamily"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@color/text_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="322dp"
        android:text="@string/health_check_subnetmask"
        style="@style/fontFamily"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@color/text_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="367dp"
        android:text="@string/health_check_defaultgateway"
        style="@style/fontFamily"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@color/text_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="414dp"
        android:text="@string/health_check_dns1"
        style="@style/fontFamily"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@color/text_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="460dp"
        android:text="@string/health_check_dns2"
        style="@style/fontFamily"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@color/text_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="506dp"
        android:text="@string/health_check_net_connection"
        style="@style/fontFamily"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@color/text_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="552dp"
        android:text="@string/health_check_download_speed"
        style="@style/fontFamily"/>
    <TextView
        android:textSize="20sp"
        android:id="@+id/hCheckRMacAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="652dp"
        android:layout_marginTop="138dp"
        style="@style/fontFamily"/>
    <TextView
        android:textSize="20sp"
        android:id="@+id/hCheckResultSsid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="652dp"
        android:layout_marginTop="184dp"
        style="@style/fontFamily"/>
    <TextView
        android:textSize="20sp"
        android:id="@+id/hCheckResultWifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="652dp"
        android:layout_marginTop="230dp"
        style="@style/fontFamily"/>
    <TextView
        android:textSize="20sp"
        android:id="@+id/hCheckResultIpAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="652dp"
        android:layout_marginTop="276dp"
        style="@style/fontFamily"/>
    <TextView
        android:textSize="20sp"
        android:id="@+id/hCheckResultSubnetMask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="652dp"
        android:layout_marginTop="322dp"
        style="@style/fontFamily"/>
    <TextView
        android:textSize="20sp"
        android:id="@+id/hCheckResultDefaultGateway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="652dp"
        android:layout_marginTop="367dp"
        style="@style/fontFamily"/>
    <TextView
        android:textSize="20sp"
        android:id="@+id/hCheckResultDns1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="652dp"
        android:layout_marginTop="414dp"
        style="@style/fontFamily"/>
    <TextView
        android:textSize="20sp"
        android:id="@+id/hCheckResultDns2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="652dp"
        android:layout_marginTop="460dp"
        style="@style/fontFamily"/>
    <TextView
        android:textSize="20sp"
        android:id="@+id/hCheckResultNetConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="652dp"
        android:layout_marginTop="506dp"
        style="@style/fontFamily"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@color/text_enable"
        android:id="@+id/hCheckDSpeedPending"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="652dp"
        android:layout_marginTop="553dp"
        android:text="@string/health_check_pending"
        style="@style/fontFamily"/>
    <ImageView
        android:id="@+id/hCheckResultDSpeedImg"
        android:visibility="invisible"
        android:layout_width="33dp"
        android:layout_height="29dp"
        android:layout_marginLeft="651dp"
        android:layout_marginTop="555dp"
        android:src="@drawable/health_check_speed_low"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@color/text_black"
        android:id="@+id/hCheckResultDSpeedText"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="694dp"
        android:layout_marginTop="553dp"
        style="@style/fontFamily"/>
    <ImageButton
        android:id="@+id/close"
        android:background="@drawable/close"
        android:layout_width="191dp"
        android:layout_height="61dp"
        android:layout_marginLeft="546dp"
        android:layout_marginTop="630dp"/>
</RelativeLayout>
