<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="1280dp"
        android:layout_height="83dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/title_wifi_141"/>
    <ImageView
        android:id="@+id/pankuzu"
        android:layout_width="354dp"
        android:layout_height="87dp"
        android:layout_marginLeft="905dp"
        android:layout_marginTop="3dp"
        android:src="@drawable/pankuzu_wifi"/>
    <ImageView
        android:layout_width="332dp"
        android:layout_height="27dp"
        android:layout_marginLeft="189dp"
        android:layout_marginTop="116dp"
        android:src="@drawable/health_check_txt"/>
    <ImageView
        android:layout_width="789dp"
        android:layout_height="92dp"
        android:layout_marginLeft="188dp"
        android:layout_marginTop="173dp"
        android:src="@drawable/health_check_txt02"/>
    <ImageView
        android:layout_width="948dp"
        android:layout_height="234dp"
        android:layout_marginLeft="166dp"
        android:layout_marginTop="292dp"
        android:src="@drawable/health_check_base"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@color/text_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="237dp"
        android:layout_marginTop="300dp"
        android:text="@string/health_check_ssid"
        style="@style/fontFamily"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@color/text_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="237dp"
        android:layout_marginTop="346dp"
        android:text="@string/health_check_wifi"
        style="@style/fontFamily"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@color/text_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="237dp"
        android:layout_marginTop="392dp"
        android:text="@string/health_check_ipaddress"
        style="@style/fontFamily"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@color/text_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="237dp"
        android:layout_marginTop="438dp"
        android:text="@string/health_check_net_connection"
        style="@style/fontFamily"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@color/text_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="237dp"
        android:layout_marginTop="484dp"
        android:text="@string/health_check_download_speed"
        style="@style/fontFamily"/>
    <TextView
        android:textSize="20sp"
        android:id="@+id/hCheckResultSsid"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="506dp"
        android:layout_marginTop="300dp"
        style="@style/fontFamily"/>
    <ImageView
        android:id="@+id/hCheckLoadingSsid"
        android:visibility="invisible"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginLeft="188dp"
        android:layout_marginTop="299dp"
        android:src="@drawable/health_check_loading"/>
    <ImageView
        android:id="@+id/hCheckRCheckSsid"
        android:visibility="invisible"
        android:layout_width="38dp"
        android:layout_height="33dp"
        android:layout_marginLeft="186dp"
        android:layout_marginTop="299dp"
        android:src="@drawable/health_check_checked"/>
    <TextView
        android:textSize="20sp"
        android:id="@+id/hCheckResultWifi"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="506dp"
        android:layout_marginTop="346dp"
        style="@style/fontFamily"/>
    <ImageView
        android:id="@+id/hCheckLoadingWifi"
        android:visibility="invisible"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginLeft="188dp"
        android:layout_marginTop="345dp"
        android:src="@drawable/health_check_loading"/>
    <ImageView
        android:id="@+id/hCheckRCheckWifi"
        android:visibility="invisible"
        android:layout_width="38dp"
        android:layout_height="33dp"
        android:layout_marginLeft="186dp"
        android:layout_marginTop="345dp"
        android:src="@drawable/health_check_checked"/>
    <TextView
        android:textSize="20sp"
        android:id="@+id/hCheckResultIpAddress"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="506dp"
        android:layout_marginTop="392dp"
        style="@style/fontFamily"/>
    <ImageView
        android:id="@+id/hCheckLoadingIpAddress"
        android:visibility="invisible"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginLeft="188dp"
        android:layout_marginTop="391dp"
        android:src="@drawable/health_check_loading"/>
    <ImageView
        android:id="@+id/hCheckRCheckIpAddress"
        android:visibility="invisible"
        android:layout_width="38dp"
        android:layout_height="33dp"
        android:layout_marginLeft="186dp"
        android:layout_marginTop="391dp"
        android:src="@drawable/health_check_checked"/>
    <TextView
        android:textSize="20sp"
        android:id="@+id/hCheckResultNetConnection"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="506dp"
        android:layout_marginTop="438dp"
        style="@style/fontFamily"/>
    <ImageView
        android:id="@+id/hCheckLoadingNetConnectio"
        android:visibility="invisible"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginLeft="188dp"
        android:layout_marginTop="437dp"
        android:src="@drawable/health_check_loading"/>
    <ImageView
        android:id="@+id/hCheckRCheckNetConnection"
        android:visibility="invisible"
        android:layout_width="38dp"
        android:layout_height="33dp"
        android:layout_marginLeft="186dp"
        android:layout_marginTop="437dp"
        android:src="@drawable/health_check_checked"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@color/text_gray_hc"
        android:id="@+id/hCheckDSpeedPending"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="506dp"
        android:layout_marginTop="484dp"
        android:text="@string/health_check_pending"
        style="@style/fontFamily"/>
    <ImageView
        android:id="@+id/hCheckResultDSpeedImg"
        android:visibility="invisible"
        android:layout_width="33dp"
        android:layout_height="29dp"
        android:layout_marginLeft="506dp"
        android:layout_marginTop="485dp"
        android:src="@drawable/health_check_speed_low"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@color/text_black"
        android:id="@+id/hCheckResultDSpeedText"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="549dp"
        android:layout_marginTop="483dp"
        android:text="@string/h_check_low_speed"
        style="@style/fontFamily"/>
    <ImageView
        android:id="@+id/hCheckLoadingDSpeed"
        android:visibility="invisible"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginLeft="188dp"
        android:layout_marginTop="483dp"
        android:src="@drawable/health_check_loading"/>
    <ImageView
        android:id="@+id/hCheckRCheckDownloadSpeed"
        android:visibility="invisible"
        android:layout_width="38dp"
        android:layout_height="33dp"
        android:layout_marginLeft="186dp"
        android:layout_marginTop="483dp"
        android:src="@drawable/health_check_checked"/>
    <ImageView
        android:id="@+id/checkNGResultText"
        android:visibility="invisible"
        android:layout_width="515dp"
        android:layout_height="16dp"
        android:layout_marginLeft="189dp"
        android:layout_marginTop="542dp"
        android:src="@drawable/health_check_error_txt"/>
    <ImageButton
        android:id="@+id/next_btn"
        android:background="@drawable/next_btn_common"
        android:visibility="gone"
        android:layout_width="201dp"
        android:layout_height="61dp"
        android:layout_marginLeft="540dp"
        android:layout_marginTop="643dp"/>
    <ImageButton
        android:id="@+id/back_btn"
        android:background="@drawable/back_btn_common"
        android:visibility="gone"
        android:layout_width="191dp"
        android:layout_height="61dp"
        android:layout_marginLeft="545dp"
        android:layout_marginTop="643dp"/>
    <ImageButton
        android:id="@+id/details_btn"
        android:background="@drawable/details_btn_common"
        android:clickable="false"
        android:layout_width="209dp"
        android:layout_height="45dp"
        android:layout_marginLeft="906dp"
        android:layout_marginTop="541dp"/>
</RelativeLayout>
